--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,6 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "nodemon": "^3.1.11",
-    "pdf-parse": "^2.4.5",
-    "sqlite3": "^5.1.7"
+    "pdf-parse": "^2.4.5"
   }
 }
